<resources>
    <string name="app_name">document-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_new_field">add new field</string>
    <string name="create_model">Create Model</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Add_New_Model">Add New Model</string>
    <string name="model_name">model name</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Title">Title</string>
    <string name="This_is_mess">This is mess</string>
    <string name="Confirm">Confirm</string>
    <string name="Create">Create</string>
    <string name="Back">back</string>
    <string name="Edit_Model">Edit Model</string>
    <string name="name_1">name:</string>
    <string name="content">content</string>
    <string name="datetime_1">Datetime:</string>
    <string name="pick">Pick</string>
    <string name="input_number">input number</string>
    <string name="input_text">input text</string>
    <string name="create_record">create record</string>
    <string name="search_1">search...</string>
    <string name="no_record">no record</string>
    <string name="select_all">Select all</string>
    <string name="field_name">field name</string>
    <string name="field_name_must_not_be_empty">Field Name mustn\'t be empty</string>
    <string name="model_must_not_contain___">Model mustn\'t contain default field</string>
    <string name="please_change">Please change</string>
    <string name="to_other_name">to another name</string>
    <string name="field">field</string>
    <string name="text">Text</string>
    <string name="number">Number</string>
    <string name="datetime">Datetime</string>
    <string name="record">Record</string>
    <string name="delete_model">Delete model</string>
    <string name="model">model</string>
    <string name="delete_record">Delete Record</string>
    <string name="add">Add</string>
    <string name="model_name_must_not_be_empty">Model name mustn\'t be empty!</string>
    <string name="name_must_not_be_empty">Name mustn\'t be empty!</string>
    <string name="now">now</string>
    <string name="years_ago">years ago</string>
    <string name="months_ago">months ago</string>
    <string name="days_ago">days ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="add_new_model">add new model</string>
    <string name="default_field_create_time">create_time</string>
    <string name="default_field_last_update_time">last_update_time</string>
    <string name="name">name</string>
    <string name="age">age</string>
    <string name="student">Student</string>
    <string name="name_demo1">Peter</string>
    <string name="name_demo2">Atali</string>
    <string name="name_demo3">Cubet</string>
    <string name="pick_icon">Pick Icon</string>
    <string name="search">Search</string>
    <string name="insert_model_failure">Models cannot have the same name. \n\nCreate model failed.</string>
    <string name="update_model_failure">Models cannot have the same name. \n\nEdit model failed.</string>
    <string name="group">Group</string>
    <string name="group_by">Group by</string>
    <string name="filter">Filter</string>
    <string name="current_filters">Current Filters:</string>
    <string name="add_new_filter">Add new filter</string>
    <string name="field_name_2">Field Name:</string>
    <string name="value_1">Value:</string>
    <string name="enter_value_">Enter value...</string>
    <string name="not">not</string>
    <string name="contains">contains</string>
    <string name="not_contains">not contains</string>
    <string name="not_equal">not equal</string>
    <string name="mess_field_name_not_unique">The field names in the model must not be the same</string>
    <string name="filter_by">Filter by</string>
    <string name="sort">Sort</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="sort_by">Sort by</string>
    <string name="reverse">Reverse</string>
    <string name="operator_">Operator:</string>
    <string name="all">all</string>
    <string name="analysis">analysis</string>
    <string name="analysis_title_dialog">Analysis</string>
    <string name="max">max</string>
    <string name="min">min</string>
    <string name="avg">avg</string>
    <string name="sum">sum</string>

</resources>