<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/filter"
        android:textColor="#0D4E2A"
        android:textSize="19sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_title"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tv_current_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="20dp"
        android:text="@string/current_filters"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv_current_filters" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/recycler_view"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/layout_create_new_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:padding="5dp"
        android:background="#DAF6FF"
        >

        <TextView
            android:id="@+id/tv_field_name"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/field_name_2"
            android:gravity="center"
            android:textColor="@color/black" />
        <Spinner
            android:id="@+id/spinner_field_name"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/tv_field_name"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/tv_operator"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_field_name"
            android:layout_height="35dp"
            android:text="@string/operator_"
            android:gravity="center"
            android:textColor="@color/black" />
        <Spinner
            android:id="@+id/spinner_operator"
            android:layout_width="match_parent"
            android:layout_below="@id/spinner_field_name"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/tv_field_name"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_below="@id/tv_operator"
            android:layout_height="35dp"
            android:text="@string/value_1"
            android:gravity="center"
            android:textColor="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/edit_value"
            android:background="@drawable/bg_edit_classic"
            android:layout_below="@id/spinner_operator"
            android:layout_toRightOf="@id/tv_value"
            android:layout_alignLeft="@id/spinner_operator"
            android:hint="@string/enter_value_"
            android:textSize="12dp"
            android:inputType="textNoSuggestions|text"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:id="@+id/line3"
        android:background="@color/black"
        android:layout_below="@id/layout_create_new_filter"
        />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/btn_add_new_filter"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/line3"
        android:background="@drawable/bg_btn_classic"
        android:text="@string/add_new_filter" />


</RelativeLayout>