<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    >


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Title"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/text_color_hint"
        />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_mess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/This_is_mess"
                android:maxHeight="120dp"
                android:textColor="@color/text_color_hint"
                />
        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/OK"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_btn_classic"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_btn_classic"
            android:id="@+id/btn_cancel"
            android:text="@string/Cancel"
            android:layout_toLeftOf="@id/btn_ok"
            android:layout_marginRight="5dp"
            />
    </RelativeLayout>



</RelativeLayout>