<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/Edit_Model"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="#0D4E2A"
        />


        <TextView
            android:id="@+id/tv_name"
            android:layout_below="@id/tv_title"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:text="@string/name_1"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_below="@id/tv_title"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_model_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edit_classic"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/tv_name"
            android:hint="model name"
            android:textSize="15sp"
            />


        <TextView
            android:id="@+id/tv_icon"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="icon: "
            android:layout_below="@id/tv_name"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/edit_model_name"
            android:src="@drawable/ic_default_model_icon"
            android:layout_alignLeft="@id/edit_model_name"
            android:layout_marginTop="5dp"
            />



    <RelativeLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_icon"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_btn_classic"
            android:text="@string/Save"
            android:layout_alignParentRight="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/bg_btn_classic"
            android:id="@+id/btn_cancel"
            android:layout_toLeftOf="@id/btn_save"
            android:layout_marginRight="5dp"
            android:text="@string/Cancel"
            />
    </RelativeLayout>

</RelativeLayout>