<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_model_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        tools:text="Student"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tv_model_name"
        android:id="@+id/scrollView"
        >
        <TextView
            android:id="@+id/tv_content"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            tools:text="name: Text\nage: Number"
            />
    </ScrollView>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/bg_btn_classic"
        android:text="@string/Create"
        android:layout_alignParentRight="true"
        android:layout_below="@id/scrollView"
        />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/bg_btn_classic"
        android:text="@string/Back"
        android:layout_toLeftOf="@id/btn_create"
        android:layout_below="@id/scrollView"
        android:layout_marginRight="5dp"
        />


</RelativeLayout>