<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.ViewRecordsFragment">
    <!--todo: Check theme in layout, textview cannot visiable-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#6A3D3D">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:translationZ="20dp">

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_edit_classic"
            android:paddingRight="36dp"
            android:hint="@string/search_1"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_search_close"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:src="@drawable/ic_clear"
            app:tint="@color/black" />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/icon_loading_search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/appbar_layout"
        android:layout_centerHorizontal="true"
        android:translationZ="1dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar_layout"
        android:layout_above="@id/layout_action_records"
        tools:itemCount="2"
        tools:listitem="@layout/item_data_model" />

    <include
        android:id="@+id/layout_action_records"
        layout="@layout/layout_action_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/tv_no_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_record"
        android:textColor="@color/text_color_hint"
        android:textSize="15sp" />

</RelativeLayout>