<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D3D3D3"
    android:layout_gravity="center"
    android:theme="@style/Theme.AppCompat.DayNight"
    >

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@id/line1">

        <RelativeLayout
            android:id="@+id/action_select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rippler_action_record">

            <ImageView
                android:id="@+id/img_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_done_all_24" />

            <TextView
                android:id="@+id/tv_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_select_all"
                android:layout_centerHorizontal="true"
                android:text="@string/select_all" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/action_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rippler_action_record"

            >

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_delete_24" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_delete"
                android:layout_centerHorizontal="true"
                android:text="@string/delete" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/action_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rippler_action_record"

            >

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_edit"
                android:layout_centerHorizontal="true"
                android:text="@string/edit" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/action_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rippler_action_record">

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_baseline_close_24" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_cancel"
                android:layout_centerHorizontal="true"
                android:text="@string/Cancel" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/layout_content"
        android:background="@color/black"
        />


</RelativeLayout>